--- a/templates/manager/dashboard.html.twig
+++ b/templates/manager/dashboard.html.twig
@@ -38,7 +38,7 @@
                     <i class="fas fa-calendar-alt"></i> {{ 'manager_dashboard.nav.all_appointments' | trans }}
                 </a>
                 <a href="{{ path('manager_barber_schedules') }}" class="btn btn-outline-primary">
-                    <i class="fas fa-user-clock"></i> {{ 'manager_dashboard.nav.barber_schedules' | trans }}
+                    <i class="fas fa-clock"></i> {{ 'manager_dashboard.nav.barber_schedules' | trans }}
                 </a>
             </div>
         </div>
