--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -14,7 +14,7 @@
                     <a href="{{ path('list_all_barbers') }}"><button type="button" class="button success_btn">{{ 'dashboard.admin_menu.list_barbers' | trans }}</button></a>
                     <a href="{{ path('list_without_role') }}"><button type="button" class="button success_btn">{{ 'dashboard.admin_menu.list_without_roles' | trans }}</button></a>
                     {% if user.isUserIsSuperAdmin %}
-                        <a href="{{ path('admin_procedure_index') }}"><button type="button" class="button success_btn">{{ 'dashboard.admin_menu.procedure_panel' | trans }}</button></a>
+                        <a href="{{ path('legacy_admin_procedures') }}"><button type="button" class="button success_btn">{{ 'dashboard.admin_menu.procedure_panel' | trans }}</button></a>
                     {% endif %}
                 {% endif %}
 {#                <a href="{{ path('app_logout') }}">Logout</a>#}
