--- a/templates/manager/appointments.html.twig
+++ b/templates/manager/appointments.html.twig
@@ -43,7 +43,7 @@
                     <i class="fas fa-calendar-alt"></i> {{ 'appointments.nav_all' | trans }}
                 </a>
                 <a href="{{ path('manager_barber_schedules') }}" class="btn btn-outline-primary">
-                    <i class="fas fa-user-clock"></i> Графици на бръснари
+                    <i class="fas fa-calendar-alt"></i> {{ 'appointments.schedule' | trans }}
                 </a>
             </div>
         </div>
